@@ -80,6 +80,13 @@
       <version>1.2.5-R1.1</version>
     </dependency>
 
+    <!-- WorldBorder -->
+    <dependency>
+      <groupId>com.github.brettflan</groupId>
+      <artifactId>WorldBorder</artifactId>
+      <version>1.5.0</version>
+    </dependency>
+
     <!-- Dynmap -->
     <dependency>
       <groupId>org.dynmap</groupId>
